methods.returning.MethodsReturning.scala.error
Erreur de compilation :
MethodsReturning:9: error: expected class or object definition
var vuBiscuit:Boolean =false
^MethodsReturning:10: error: expected class or object definition
while(!vuBiscuit)
^MethodsReturning:11: error: expected class or object definition
  {
  ^MethodsReturning:20: error: expected class or object definition
recule(6) 
^MethodsReturning:22: error: Unmatched closing brace '}' ignored here
}
^